--- a/maps.html
+++ b/maps.html
@@ -8,11 +8,30 @@
     <link rel="stylesheet" href="maps.css">
 </head>
 <body>
-    <header class="maps-header">
-        <img src="ametikooli-logo_1-removebg-preview.png" alt="logo">
-        <a class="head-button head-button1" href="">Avaleht</a>
-        <a class="head-button head-button2" href="">Galerii</a>
-        <a class="head-button head-button3" href="">Kontakt</a>
+    <header class="maps-header"> <!--navbar class-->
+        <img src="ametikooli-logo_1-removebg-preview.png" alt="logo"> <!--Brand title-->
+        <a href="#" class="toggle-button" id="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <!-- <div class="navbar-links" id="navbar-links">
+            <ul>
+                <li><a class="head-button head-button1" href="#">Avaleht</a></li>
+                <li><a class="head-button head-button2" href="#">Galerii</a></li>
+                <li><a class="head-button head-button3" href="#">Kontakt</a></li>
+            </ul>
+        </div> -->
+        <div class="hamburger-menu navbar-links" id="navbar-links">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>  <ul class="menu__box">
+              <li><a class="menu__item head-button" href="#">Avaleht</a></li>
+              <li><a class="menu__item head-button" href="#">Asukoht</a></li>
+              <li><a class="menu__item head-button" href="#">Kontakt</a></li>
+            </ul>
+          </div>
     </header>
     <div class="mapp">
         <br>
