--- a/contacts2.html
+++ b/contacts2.html
@@ -12,9 +12,9 @@
          <img src="ametikooli-logo_1-removebg-preview.png" alt="ametikooli logo41">
           <section class="c-container">
              <div class="c2-routes">
-                    <button class="buttonc">Avaleht</button>
-                    <button class="buttonc">Galerii</button>
-                    <button class="buttonc">Asukoht</button>
+                    <a href="index.html"><button class="buttonc">Avaleht</button></a>
+                    <a href=""><button class="buttonc">Galerii</button></a>
+                    <a href="maps.html"><button class="buttonc">Asukoht</button></a>
              </div>
          </section>
       </header>
