--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header class="index-header">
-        <img class="index-logo" src="/Tiim4-veebisait/ametikooli-logo_1-removebg-preview.png" alt="Logo">
+        <img class="index-logo" src="ametikooli-logo_1-removebg-preview.png" alt="Logo">
         <section class="i-container">
             <div class="index-routes">
-                <button class="i-route">Galerii</button>
-                <button class="i-route">Asukoht</button>
-                <button class="i-route">Kontakt</button>
+                <a href=""><button class="i-route">Galerii</button></a>
+                <a href="maps.html"><button class="i-route">Asukoht</button></a>
+                <a href="contacts2.html"><button class="i-route">Kontakt</button></a>
             </div>
         </section>
     </header>
@@ -22,10 +22,11 @@
         <div class="i-tutvustus">
             <h1>TUTVUSTUS</h1>
             <p class="i-paragraph"> Kool loodi 6. novembril 1922 Kuressaare Ehitusinstruktorite Koolina aadressil Kohtu 22, esmakordselt võeti vastu 19 õpilast. 
-                Seda võib pidada nii Kuressaare Ametikooli kui üldse järjepideva kutsehariduse andmise alguseks Saaremaal. 
-                1930. aastatel õpetati koolis peamiselt ehitus-, puidu- ja metallitööd. 
-                1950ndatel lisandusid põllumajanduserialad. 
-                1970. aastail hakati andma keskharidust ning avati kodumajanduse-käsitöö-loomakasvatuse erialarühmad tütarlastele. 
+                Seda võib pidada nii Kuressaare Ametikooli kui üldse järjepideva kutsehariduse andmise alguseks Saaremaal.
+                1930. aastatel õpetati koolis peamiselt ehitus-, puidu- ja metallitööd.
+
+                1950ndatel lisandusid põllumajanduserialad.
+                1970. aastail hakati andma keskharidust ning avati kodumajanduse-käsitöö-loomakasvatuse erialarühmad tütarlastele.
                 1998. aastal liideti Ametikool 1992 Upal alustanud Saaremaa Kutseõppekeskusega.
             </p>
             <br>
