--- a/maps.html
+++ b/maps.html
@@ -10,26 +10,27 @@
 <body>
     <header class="maps-header"> <!--navbar class-->
         <img src="ametikooli-logo_1-removebg-preview.png" alt="logo"> <!--Brand title-->
+        <section class="k-container">
+            <div class="k-routes">
+                   <a href="index.html"><button class="buttonk">Avaleht</button></a>
+                   <a href="galerii.html"><button class="buttonk">Galerii</button></a>
+                   <a href="contacts2.html"><button class="buttonk">Kontakt</button></a>
+            </div>
+        </section>
         <a href="#" class="toggle-button" id="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </a>
-        <!-- <div class="navbar-links" id="navbar-links">
-            <ul>
-                <li><a class="head-button head-button1" href="#">Avaleht</a></li>
-                <li><a class="head-button head-button2" href="#">Galerii</a></li>
-                <li><a class="head-button head-button3" href="#">Kontakt</a></li>
-            </ul>
-        </div> -->
+        
         <div class="hamburger-menu navbar-links" id="navbar-links">
             <input id="menu__toggle" type="checkbox" />
             <label class="menu__btn" for="menu__toggle">
               <span></span>
             </label>  <ul class="menu__box">
-              <li><a class="menu__item head-button" href="#">Avaleht</a></li>
-              <li><a class="menu__item head-button" href="#">Asukoht</a></li>
-              <li><a class="menu__item head-button" href="#">Kontakt</a></li>
+              <li><a class="menu__item head-button" href="index.html">Avaleht</a></li>
+              <li><a class="menu__item head-button" href="galerii.html">Galerii</a></li>
+              <li><a class="menu__item head-button" href="contacts2.html">Kontakt</a></li>
             </ul>
           </div>
     </header>
