--- a/contacts2.html
+++ b/contacts2.html
@@ -13,7 +13,7 @@
           <section class="c-container">
              <div class="c2-routes">
                     <a href="index.html"><button class="buttonc">Avaleht</button></a>
-                    <a href=""><button class="buttonc">Galerii</button></a>
+                    <a href="galerii.html"><button class="buttonc">Galerii</button></a>
                     <a href="maps.html"><button class="buttonc">Asukoht</button></a>
              </div>
          </section>
@@ -60,9 +60,9 @@
               <span></span>
             </label>
             <ul class="menu__box">
-              <li><a class="menu__item" href="#">Avaleht</a></li>
-              <li><a class="menu__item" href="#">Galerii</a></li>
-              <li><a class="menu__item" href="#">Asukoht</a></li>
+              <li><a class="menu__item" href="index.html">Avaleht</a></li>
+              <li><a class="menu__item" href="galerii.html">Galerii</a></li>
+              <li><a class="menu__item" href="maps.html">Asukoht</a></li>
             </ul>
          </div>
 </body>
