--- a/galerii.html
+++ b/galerii.html
@@ -16,15 +16,15 @@
             <nav>
                 <img src="ametikooli-logo_1-removebg-preview.png" class="logo">
                 <ul>
-                    <li><a href="#"><button>Avaleht</button></a></li>
-                    <li><a href="#"><button>Asukoht</button> </a></li>
-                    <li><a href="#"><button>Kontakt</button></a></li>
+                    <li><a href="index.html"><button>Avaleht</button></a></li>
+                    <li><a href="maps.html"><button>Asukoht</button> </a></li>
+                    <li><a href="contacts2.html"><button>Kontakt</button></a></li>
                 </ul>
             </nav>
             
         </div>
     </div>
-    <hr style="height:2px;border-width:0;color:gray;background-color:black">
+    <!-- <hr style="height:2px;border-width:0;color:gray;background-color:black"> -->
 
     <div class="box">
         <div class="swiper">
@@ -81,9 +81,9 @@
   </label>
 
   <ul class="menu__box">
-    <li><a class="menu__item" href="#">Avaleht</a></li>
-    <li><a class="menu__item" href="#">Asukoht</a></li>
-    <li><a class="menu__item" href="#">Kontakt</a></li>
+    <li><a class="menu__item" href="index.html">Avaleht</a></li>
+    <li><a class="menu__item" href="maps.html">Asukoht</a></li>
+    <li><a class="menu__item" href="contacts2.html">Kontakt</a></li>
   </ul>
 </div>
 
