--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="index-logo" src="ametikooli-logo_1-removebg-preview.png" alt="Logo">
         <section class="i-container">
             <div class="index-routes">
-                <a href=""><button class="i-route">Galerii</button></a>
+                <a href="galerii.html"><button class="i-route">Galerii</button></a>
                 <a href="maps.html"><button class="i-route">Asukoht</button></a>
                 <a href="contacts2.html"><button class="i-route">Kontakt</button></a>
             </div>
@@ -54,9 +54,9 @@
           <span></span>
         </label>
         <ul class="menu__box">
-          <li><a class="menu__item" href="#">Galerii</a></li>
-          <li><a class="menu__item" href="#">Asukoht</a></li>
-          <li><a class="menu__item" href="#">Kontakt</a></li>
+          <li><a class="menu__item" href="galerii.html">Galerii</a></li>
+          <li><a class="menu__item" href="maps.html">Asukoht</a></li>
+          <li><a class="menu__item" href="contacts2.html">Kontakt</a></li>
         </ul>
     </div>
 </body>
