--- a/maps.html
+++ b/maps.html
@@ -36,7 +36,7 @@
     </header>
     <div class="mapp">
         <br>
-        <h3>Kaart</h3>
+        <h1>KAART</h1>
         <div id="map"></div>
     </div>
     <script src="maps.js"></script>
