--- a/galerii.html
+++ b/galerii.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <!-- <hr style="height:2px;border-width:0;color:gray;background-color:black"> -->
-
+    <h1 class="Galerii-text">GALERII</h1>
     <div class="box">
         <div class="swiper">
             <!-- Additional required wrapper -->
